gitops/workloads/microservices/uniquizz/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uniquizz-api-svc
spec:
  selector:
    app: resumind
  ports:
    - port: 80
      targetPort: 3000
